--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,8 @@ version: '3.9'
 
 services:
   app:
-    restart: always
+    restart: unless-stopped
     build: .
-    ports:
-      - 8000:80
     networks:
       app_net:
         ipv4_address: ${APP_ADDR}
@@ -14,10 +12,10 @@ services:
     volumes:
       - ./app:/code/app:rw
       - ./migrations:/code/migrations:rw
-    command: uvicorn app.main:app --reload --workers ${APP_WORKER_COUNT} --host 0.0.0.0 --port 80
+    command: uvicorn app.main:app --reload --workers ${APP_WORKER_COUNT} --host 0.0.0.0 --port ${APP_PORT}
 
   postgres:
-    restart: always
+    restart: unless-stopped
     image: postgres:14.2
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASS}
@@ -29,11 +27,28 @@ services:
     ports:
       - 8432:5432
     volumes:
-      - ./pg-data:/var/lib/postgresql/data
+      - ./pg-data:/var/lib/postgresql/data:rw
+
+  nginx:
+    image: nginx:latest
+    restart: unless-stopped
+    volumes:
+      - ./frontend:/data/static
+      - ./nginx.conf.template:/etc/nginx/nginx.conf.template:ro
+    ports:
+      - 8080:80
+    environment:
+      NGINX_PORT: 80
+      APP_ADDR: 172.12.0.20
+      APP_PORT: 8000
+    networks:
+      app_net:
+        ipv4_address: ${NGINX_ADDR}
+    command: /bin/bash -c "envsubst < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
 
 
 networks:
   app_net:
     ipam:
       config:
-        - subnet: 172.12.0.0/28
+        - subnet: 172.12.0.0/24
